3.11) Implementing the API
-> CONCLUDED:
- Task EXceptions
- transactions tests

* WORKING ON:
- transactions - bug in tests

* NEXT STEPS:
- MongoDb transactions
- Cacheable
- Modular Monolith
- Jenkins Pipeline

* FUTURE IMPLEMENTATIONS:
- Multiples DB's
- Multi-Tenancy
- Internationalization
- Exceptions - identify (Http 500, 400, 200)
- GPS
- Upload: Pictures + Files
- OAuth2/JWT authentication
- Push notifications